<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.alicebot.ab</groupId>
	<artifactId>ab</artifactId>
	<version>4.6.1-sprint</version>
	<name>sprint-alicebot</name>
	<description>
		Program AB is the reference implementation of the AIML 2.0 draft specification.
		AIML is a widely adopted standard for creating chat bots and mobile virtual assistants like ALICE, Mitsuku, English Tutor, The Professor, S.U.P.E.R. and many more.
	</description>
	<properties>
		<slf4j.version>2.0.13</slf4j.version>
		<java.version>21</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<dependencies>
	    <dependency>
	    	<groupId>org.slf4j</groupId>
	    	<artifactId>slf4j-api</artifactId>
	    	<version>${slf4j.version}</version>
	    </dependency>
	    <dependency>
	    	<groupId>org.slf4j</groupId>
	    	<artifactId>jcl-over-slf4j</artifactId>
	    	<version>${slf4j.version}</version>
	    	<scope>runtime</scope>
	    </dependency>
	    <dependency>
	    	<groupId>ch.qos.logback</groupId>
	    	<artifactId>logback-classic</artifactId>
	    	<version>1.5.6</version>
	    	<optional>true</optional>
	    </dependency>

	    <dependency>
	    	<groupId>joda-time</groupId>
	    	<artifactId>joda-time</artifactId>
	    	<version>2.12.7</version>
	    </dependency>
	    <dependency>
			<groupId>com.vaadin.external.google</groupId>
			<artifactId>android-json</artifactId>
			<version>0.0.20131108.vaadin1</version>
		</dependency>

            
		<!-- https://github.com/GitHubSprint/sprint-validator -->
		<dependency>
			<groupId>pl.sprint</groupId>
			<artifactId>validator</artifactId>
			<version>2.0.4</version>
		</dependency>
		<!-- ML FastText Libraries -->
		<dependency>
			<groupId>com.mayabot.mynlp</groupId>
			<artifactId>mynlp</artifactId>
			<version>4.1.4-sprint</version>
		</dependency>
		<!-- ML Libraries -->

	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
						  <mainClass>org.alicebot.ab.cli.Main</mainClass>
						</manifest>
					</archive>
				  <descriptorRefs>
					<descriptorRef>jar-with-dependencies</descriptorRef>
				  </descriptorRefs>
				</configuration>
				<executions>
				  <execution>
					<id>simple-command</id>
					<phase>package</phase>
					<goals>
					  <goal>single</goal>
					</goals>
				  </execution>
				</executions>
			  </plugin>
		</plugins>
	</build>
</project>